# palaso-python

./: .gitattributes  .gitignore  .hgignore  LICENSE.txt  MANIFEST.in  README  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  usfmtec.spec
debian/: changelog  clean  control  copyright  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  python-palaso-core.install  python-palaso-font.install  python-palaso-kbd.install  python-palaso.doc-base.EX  python3-palaso-core.install  python3-palaso-font.install  python3-palaso-kbd.install  python3-palaso-sfm.install  python3-palaso-teckit.install  python3-palaso-unicode.install  rules
debian-src/: README  changelog  control  copyright  python-palaso-core.install  python-palaso-font.install  python-palaso-kbd.install  python-palaso-sfm.install  python-palaso-teckit.install  python-palaso-unicode.install  python-palaso.font.install  python3-palaso-core.install  python3-palaso-font.install  python3-palaso-kbd.install  python3-palaso-sfm.install  python3-palaso-teckit.install  python3-palaso-unicode.install  rules
debian/source/: include-binaries
docs/: cmptxtrender.md
lib/: palaso.kmfl.pyx  test.csv
lib/palaso/: __init__.py  contexts.py  etree.py  fontforge.py  icu.py  langtag.py  langtags.py  listdict.py  palaso.kmfl.pyx  reggen.py  unicsv.py
lib/palaso/collation/: __init__.py  icu.py  sort_trainer.glade  tailor.py
lib/palaso/contrib/: __init__.py
lib/palaso/contrib/freetype/: __init__.py  ft_structs.py
lib/palaso/contrib/freetype/ft_enums/: __init__.py  ft_load_targets.py
lib/palaso/contrib/funcparserlib/: lexer.py  parser.py  util.py
lib/palaso/core/: listdict.py
lib/palaso/debian/: __init__.py  sources.py
lib/palaso/font/: __init__.py  fontforge.py  glyphstring.py  graphite.py  grstrings.py  hbng.py  icule.py  makegdl.py  psnames.py  shape.py  stringcut.py  testml.py  ufo.py
lib/palaso/gtk/: actionpack.py  language definitions.odt  templang.py
lib/palaso/gtk/model/: Xml.py
lib/palaso/kmn/: __init__.py  coverage.py  parser.py  vector.py
lib/palaso/sfm/: __init__.py  _sfm.py  event.py  handler.py  records.py  style.py  usfm.py  usfm.sty
lib/palaso/sldr/: UnicodeSets.py  collation.py  ducet.py  iana.py  langtags_full.py  ldml.py  ldml_exemplars.py  ldml_keyboard.py  ldml_merge.py  py3xmlparser.py  xmltemplate.py
lib/palaso/tailor/: collation.py
lib/palaso/teckit/: __init__.py  _common.py  _compiler.py  _engine.py  compiler.py  engine.py
lib/palaso/text/: maxmatch.py  words.py
lib/palaso/unicode/: reorder.py  syllable.py  ucd.py  ucdata_pickle.bz2
lib/palaso/xml/: testml.py
palaso/: __init__.py  collation.py  reggen.py  unicsv.py
scripts/: getclip  vcsaggro
scripts/collation/: brktest  flattenldml  ldml2icu  ldml2icu.py  sort_trainer  sortldml  testldml  testldml.py
scripts/debian/: repo_build  repo_build.py  repo_transfer  repo_transfer.py
scripts/font/: addsfdmerge  ap2sfd  autonyms.py  cmptxtrender  cmptxtrender.py  ffbuilder  ffbuilder.py  ffpointreplace  ffpointreplace.py  ftcollide  ftcollide.py  grkern2fea  octalap  octalap.py  testmlnorm  ttkbdfont.py  ttoskfont.py  ufo2sfd
scripts/gtk/: getclip  gladerunner
scripts/kmn/: keyman2ldml  keyman2ldml.py  keymancoverage  kmfltestkeys  kmfltestkeys.py  kmn2c  kmn2klc  kmn2klc.py  kmn2ldml  kmn2ldml.py  kmn2xml  kmnreverse  kmnxml2svg
scripts/langtag/: langtag  langtag.py
scripts/palaso/: kmfltestkeys
scripts/sfm/: concordance  concordance.py  testusfm  testusfm.py  usfmlint  usfmloom  usfmtec  usfmtec.py
scripts/teckit/: checktec  checktec.py  csvtec
scripts/unicode/: ucd_spreadsheet  ucd_spreadsheet.py
scripts/xml/: testmlnorm
src/: palaso.kmfl.c  palaso.kmfl.h
src/collation/test/: basic.xml
src/palaso/: __init__.py  collation.py  contexts.py  langtags.py  reggen.py
src/palaso/collation/: __init__.py  icu.py  tailor.py
src/palaso/collation/tool/: brktest.py  flattenldml.py  ldml2icu.py  sortldml.py  testldml.py
src/palaso/debian/: sources.py
src/palaso/debian/tool/: repo_build.py  repo_transfer.py
src/palaso/font/: fontforge.py  glyphstring.py  grstrings.py  hbng.py  makegdl.py  testml.py  ufo.py
src/palaso/font/tool/: addsfdmerge.py  ap2sfd.py  cmptxtrender.py  ffbuilder.py  ffpointreplace.py  ftcollide.py  grkern2fea.py  octalap.py  testmlnorm.py  ufo2sfd.py
src/palaso/gtk/: actionpack.py
src/palaso/gtk/tool/: getclip.py  gladerunner.py
src/palaso/kmn/: __init__.py
src/palaso/kmn/tool/: keyman2ldml.py  keymancoverage.py  kmfltestkeys.py  kmn2c.py  kmn2klc.py  kmn2ldml.py  kmn2xml.py  kmnreverse.py  kmnxml2svg.py
src/palaso/sfm/: __init__.py  records.py  style.py  usfm.py  usfm.sty
src/palaso/sfm/tool/: concordance.py  testusfm.py  usfmlint.py  usfmloom.py  usfmtec.py
src/palaso/sldr/: __init__.py
src/palaso/teckit/: _common.py  _engine.py  engine.py
src/palaso/teckit/tool/: checktec.py  csvtec.py
src/palaso/text/: __init__.py  words.py
src/palaso/tool/: langtag.py  vcsaggro.py
src/palaso/unicode/: syllable.py  ucd.py  ucdata_pickle.bz2
src/palaso/unicode/tool/: ucd_spreadsheet.py
src/teckit/: __init__.py  _engine.py  compiler.py  engine.py
tests/: test_regegen.py
tests/collation/: __init__.py  kht.xml  test_tailor.py
tests/collation/base/: my-reg1.txt
tests/collation/data/: kht.xml  kht_words.txt  my-reg1.xml
tests/font/: blm.ftml  blm.htxt  blm.py  blm.txt  run_compare.py  run_graphite1.py  run_graphite2.py  run_hbng1.py  test_graphite1.py  test_graphite2.py  test_hbng1.py
tests/kmfl/: __init__.py  dont_test_kmfl.py  test_kmfl.py
tests/kmfl/base/: kyu-mymr-coverage.txt
tests/palaso/: test_kmfl.py
tests/palaso/kbds/: kyu-mymr.kmn
tests/sfm/: __init__.py  palaso.sfm.doctest  palaso.sfm.usfmdoctest  test_parser.py
tests/sldr/: UnicodeSets_test.py  ldml_exemplars_test.py  ldml_test.py  ldml_tests.py  sg.xml
tests/teckit/: __init__.py  test_codec.doctest  test_compiler.py  test_engine.py  test_engine_simple.doctest  test_mapping.doctest  test_mapping.txt
tests/teckit/data/: ISO-8859-1.map.reference.xml
tests/unicode/: test_reorder.py
