[metadata]
name = palaso
version = 0.7.6
description = Payap Language Software python package and scripts
url = http://github.com/silnrsi/palaso-python
maintainer = 'Tim Eves'
maintainer_email = 'tim_eves@sil.org'
long_description = file: README.rst, LICENSE.txt
license = MIT
license_files = LICENSE.txt
platforms = Linux, Win32, Mac OS X

[options]
packages = find:
package_dir =
    = lib
include_package_data = True
scripts = 
    scripts/sfm/concordance.py

[options.packages.find]
where = lib
exclude = contrib
